objects/kugo2p__Tier__c.object
<CustomObject>
    <description>Kugamon - Related object to Tiered Pricing that stores the volume discount schedule.</description>
    <fields>
        <fullName>DiscountTierId__c</fullName>
        <description>The CPQ Discount Tier this record is created from</description>
        <externalId>true</externalId>
        <inlineHelpText>The CPQ Discount Tier this record is created from</inlineHelpText>
        <label>DiscountTierId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__QuantityStart__c</fullName>
        <label>Quantity Start</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__TierPrice__c</fullName>
        <label>Tier Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TieredPricing__c</fullName>
        <label>Tiered Pricing</label>
        <referenceTo>kugo2p__TieredPricing__c</referenceTo>
        <relationshipLabel>Tiers</relationshipLabel>
        <relationshipName>Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tier</label>
    <nameField>
        <label>Tier Sequence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>